--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1{
     margin: 100px 100px;
 } */
 .section-2{
-    background-image: url("food_platter_background.jpg");
+    background-image: url("images/brooke-lark-lcZ9NxhOSlo-unsplash.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 200px,
