--- a/style.css
+++ b/style.css
@@ -73,11 +73,29 @@ h1{
 
 }
 
+/* .sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-height: 10%;
+    background-size: cover;
+} */
+
+
 form{
     text-align: center;
     margin: 100px 100px;
     padding: 100px 100px;
 }
+
+/* .formSticky{
+    font-size: 8px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-height: 10%;
+    /* background-size: cover; */
+/* } */
 
 #ingredients_header{
     font-weight: bolder;
@@ -137,21 +155,17 @@ form{
 
 img{
     height: 80%;
-    /* object-fit: contain; */
     border-radius: 50px;
 }
 
 .cards:hover{
     transform: scale(1.05);
     cursor: pointer;
-    /* background-color: Insert here; */
 }
 
 a {
     text-decoration: none;
     color: #82a8d3;
-    /* margin: 3px 3px;
-    padding: 3px 3px; */
     font-family: Palatino;
     letter-spacing: 2px;
     font-size-adjust: 0.5;
@@ -162,7 +176,6 @@ h3 {
     margin: 3px 3px 6px;
     padding: 3px 3px 6px;
     font-weight: bolder;
-    /* font-family: Palatino; */
 
 }
 
