Builds user show page, adds persisting user_id across pages, refactors recipe show page, and adds some specific styling for the user show page to show.css

--- a/show.css
+++ b/show.css
@@ -79,7 +79,7 @@ img{
     /* padding: 10px 300px; */
 }
 
-a {
+a.recipe_url, .favorites_header{
     color: white;
     text-decoration: none;
     font-size: 20px;
