--- a/show.css
+++ b/show.css
@@ -102,6 +102,16 @@ li{
     border-top:1px solid rgb(217, 217, 217);
 }
 
+button{
+    border-radius: 5em;
+    background-color: white;
+    margin-left: 7px; 
+}
+
+button:hover{
+    cursor: pointer;
+}
+
 footer{
     margin: 50px 50px;
     padding: 50px 50px;
