refactors some JS

--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ table {
 	border-spacing: 0;
 }
 
+
+/* END OF MEYER RESET */
+
 .section-1{
     background-color: white;
     text-align: center;
