--- a/show.css
+++ b/show.css
@@ -86,14 +86,37 @@ h5{
 
 p {
     margin: 10px 10px;
-    padding: 10px 10px;
-    
+    padding: 10px 10px;  
 }
 
 img{
     border-radius: 10em;
     margin: 10px 10px;
     /* padding: 10px 300px; */
+}
+
+.nav-bar a{
+    text-decoration: none;
+    /* color: #2eb7cf; */
+    color: rgb(157, 211, 157);
+    font-family: Palatino;
+    font-size: 17px;
+    letter-spacing: 2px;
+    font-size-adjust: 0.5;
+    word-wrap: break-word;
+    margin-left: 20px;
+    text-shadow: 0px 0px 0px;  
+}
+ul.nav-bar{
+    margin-top: 20px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.nav-bar a:hover{
+    color: #287f8f;
+    border-top: 4px solid white;
+    text-transform: none;
 }
 
 a{
@@ -103,13 +126,6 @@ a{
     font-weight: bold;
     text-shadow: 1px 0px 2px black;
 }
-/* a.recipe_url, .favorites_header{
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
-    text-shadow: 1px 0px 2px black;
-} */
 
 a:hover {
     text-transform: uppercase;
@@ -118,6 +134,10 @@ a:hover {
 ul{
     font-family: sans-serif;
     margin-bottom: 50px;
+}
+
+.user_page h2{
+    color: rgb(245, 90, 33);
 }
 
 li{
