Adjust styling for login and create user forms

--- a/style.css
+++ b/style.css
@@ -92,9 +92,10 @@ div#user-nav{
   justify-content: flex-end;
   flex-flow: column wrap;
 }
-div#user-nav > a, p {
+
+form#user-nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: right;
 }
 
 
