Adjusts nav-bar alignment on recipe show page

--- a/show.css
+++ b/show.css
@@ -111,6 +111,9 @@ ul.nav-bar{
     margin-top: 20px;
     font-weight: bold;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
 }
 
 .nav-bar a:hover{
