--- a/show.css
+++ b/show.css
@@ -98,7 +98,7 @@ img{
 .nav-bar a{
     text-decoration: none;
     /* color: #2eb7cf; */
-    color: rgb(157, 211, 157);
+    color: #9dd39d;
     font-family: Palatino;
     font-size: 17px;
     letter-spacing: 2px;
@@ -152,12 +152,6 @@ li{
 button{
     border-radius: 5em;
     background-color: white;
-    margin-left: 7px; 
-}
-
-.buttonChange{
-    border-radius: 5em;
-    background-color: blue;
     margin-left: 7px; 
 }
 
